# openid-client

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: crates.yml  deploy_ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  discovery.md  introduction.md
src/: client.rs  client_utils.rs  errors.rs  helpers.rs  http.rs  http_client.rs  issuer.rs  issuer_metadata.rs  jwk.rs  lib.rs  token_set.rs  tokenset.rs
src/client/: ciba_handle.rs  client.rs  client_get_set.rs  client_impl.rs  device_flow_handle.rs  dpop_nonce_cache.rs  helpers.rs  mod.rs  validate_id_token_params.rs
src/config/: client_auth.rs  configuration_options.rs  dpop_options.rs  mod.rs  openid_client_configuration.rs
src/defaults/: default_http_client.rs  jws_only_crypto.rs  mod.rs  openssl_crypto.rs
src/helpers/: mod.rs  private.rs  public.rs
src/issuer/: issuer.rs  jwks.rs  keystore.rs  mod.rs
src/jwks/: jwks.rs  mod.rs
src/tests/: client_test.rs  info  issuer_test.rs  mock_url_domain.rs  mod.rs  test_http_client.rs  test_interceptors.rs  testcert.p12  tokenset_tests.rs
src/tests/client/: client_auth_for_tests.rs  client_authorization_post_tests.rs  client_authorization_url_tests.rs  client_callback_params_test.rs  client_callback_tests.rs  client_ciba_tests.rs  client_decrypt_id_token_tests.rs  client_device_flow_tests.rs  client_dpop_tests.rs  client_encryption_secret_tests.rs  client_end_session_url_tests.rs  client_implicit_kid_tests.rs  client_introspeciton_tests.rs  client_mtls_tests.rs  client_new_tests.rs  client_oauth_callback_tests.rs  client_par_tests.rs  client_read_discovery_tests.rs  client_refresh_tests.rs  client_register_tests.rs  client_request_object_tests.rs  client_revocation_tests.rs  client_secret_for_alg_tests.rs  client_self_issued_tests.rs  client_signed_encrypted_responses.rs  client_userinfo_tests.rs  client_validate_id_token.rs  client_validate_id_token_tests.rs  helpers.rs  mod.rs
src/tests/issuer/: issuer_discovery_tests.rs  issuer_instance_tests.rs  issuer_new_tests.rs  issuer_webfinger_tests.rs  mod.rs
src/types/: authenticated_endpoints.rs  authentication_post_param.rs  authorization_code_grant_parameters.rs  authorization_parameters.rs  callback_params.rs  checks.rs  ciba_auth_request.rs  ciba_auth_response.rs  ciba_grant_extras.rs  ciba_grant_response.rs  client_metadata.rs  client_options.rs  client_registration.rs  client_registration_options.rs  decoded_token.rs  device_authorization_extras.rs  device_authorization_params.rs  device_authorization_request.rs  device_authorization_response.rs  device_flow_grant_response.rs  device_flow_poll_response.rs  end_session_parameters.rs  endsession_parameters.rs  errors.rs  fapi.rs  grant_extras.rs  grant_params.rs  header.rs  http.rs  http_client.rs  implicit_grant_parameters.rs  introspection_params.rs  issuer_metadata.rs  jwe_type.rs  jwk.rs  mod.rs  oauth_callback_params.rs  oidc_params.rs  openid_callback_params.rs  openid_crypto.rs  (+20 more)
