[package]
name = "openid-client"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "OpenID client for Rust"
homepage = "https://github.com/sathyajithps/openid-client"
repository = "https://github.com/sathyajithps/openid-client"
documentation = "https://docs.rs/openid-client"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.4", features = ["native-tls"], optional = true }
url = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
josekit = { version = "0.8.6", features = ["vendored"] }
base64-url = "3.0.0"
sha2 = "0.10.7"
urlencoding = "2.1.3"
base64 = "0.22.0"
rand = "0.8.5"
lazy_static = "1.4.0"
regex = "1.9.3"
lru_time_cache = "0.11.11"
jwt-compact = "0.8.0"
sha3 = "0.10.8"
async-recursion = "1.0.5"

[features]
default = ["http_client"]
http_client = ["reqwest/native-tls"]

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
assert-json-diff = "2.0.2"

[lib]
doctest = false
