[package]
name = "openid-client"
version = "1.0.0-alpha.4"
edition = "2021"
license = "MIT"
description = "OpenID client for Rust"
homepage = "https://github.com/sathyajithps/openid-client"
repository = "https://github.com/sathyajithps/openid-client"
documentation = "https://docs.rs/openid-client"
readme = "README.md"

[dependencies]
reqwest = { version = "0.13.2", features = ["native-tls"], optional = true }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
josekit = { version = "0.10.3", features = ["vendored"], optional = true }
base64-url = "3.0.3"
sha2 = "0.11.0"
urlencoding = "2.1.3"
base64 = "0.22.1"
rand = "0.10.1"
www_authenticate_parser = "1.0.2"
jsonwebtoken = { version = "10.3.0", optional = true }
rsa = { version = "0.9.10", optional = true }
elliptic-curve = { version = "0.13.8", features = ["jwk"], optional = true }
p256 = { version = "0.13.2", features = ["jwk"], optional = true }
p384 = { version = "0.13.1", features = ["jwk"], optional = true }
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"], optional = true }

[features]
default = ["http_client", "openssl_crypto", "jws_only_crypto"]
http_client = ["reqwest/native-tls"]
openssl_crypto = ["dep:josekit"]
jws_only_crypto = [
    "dep:jsonwebtoken",
    "dep:rsa",
    "dep:elliptic-curve",
    "dep:p256",
    "dep:p384",
    "dep:ed25519-dalek",
]

[lib]
doctest = false
